# dysfluentnet

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt
configs/: dysfluentnet_base.yaml
paper/: README.md  dysfluentnet_camera_ready.tex
scripts/: compute_curriculum_tiers.py  prepare_fluencybank.py  prepare_sep28k.py
src/dysfluentnet/: __init__.py  evaluate.py  train.py  utils.py
src/dysfluentnet/losses/: __init__.py  focal_loss.py  sa_ctc_loss.py
src/dysfluentnet/metrics/: __init__.py  di_wer.py
src/dysfluentnet/models/: __init__.py  decoder.py  detection_head.py  dysfluentnet.py  encoder.py
tests/: test_curriculum.py  test_losses.py  test_model_shapes.py
